[gd_scene load_steps=6 format=3 uid="uid://nsaaroym6lqr"]

[ext_resource type="Script" path="res://Scripts/Card.gd" id="1_dobng"]
[ext_resource type="Shader" path="res://Shaders/HighlightShader.gdshader" id="2_2nh2e"]
[ext_resource type="Texture2D" uid="uid://hgma8k0a155c" path="res://Images/Card.jpg" id="3_1pubs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uyac5"]
shader = ExtResource("2_2nh2e")
shader_parameter/color = Color(0, 0, 0, 0.5)
shader_parameter/width = 4.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/isHighlighted = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elumb"]
size = Vector2(286, 445)

[node name="Card" type="Area2D" node_paths=PackedStringArray("_texture")]
z_index = 1
collision_mask = 7
script = ExtResource("1_dobng")
_texture = NodePath("CardTexture")

[node name="CardTexture" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_uyac5")
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_1pubs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_elumb")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
